; ModuleID = '/home/carl/AnghaBench/git/negotiator/extr_default.c_release.c'
source_filename = "/home/carl/AnghaBench/git/negotiator/extr_default.c_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fetch_negotiator = type { i64 }
%struct.negotiation_state = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fetch_negotiator*)* @release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @release(%struct.fetch_negotiator* %0) #0 {
  %2 = alloca %struct.fetch_negotiator*, align 8
  store %struct.fetch_negotiator* %0, %struct.fetch_negotiator** %2, align 8
  %3 = load %struct.fetch_negotiator*, %struct.fetch_negotiator** %2, align 8
  %4 = getelementptr inbounds %struct.fetch_negotiator, %struct.fetch_negotiator* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = inttoptr i64 %5 to %struct.negotiation_state*
  %7 = getelementptr inbounds %struct.negotiation_state, %struct.negotiation_state* %6, i32 0, i32 0
  %8 = call i32 @clear_prio_queue(i32* %7)
  %9 = load %struct.fetch_negotiator*, %struct.fetch_negotiator** %2, align 8
  %10 = getelementptr inbounds %struct.fetch_negotiator, %struct.fetch_negotiator* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = call i32 @FREE_AND_NULL(i64 %11)
  ret void
}

declare dso_local i32 @clear_prio_queue(i32*) #1

declare dso_local i32 @FREE_AND_NULL(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
